--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,52 +55,6 @@
         android:alignmentMode="alignMargins"
         android:layout_marginTop="10dp">
 
-
-
-        <!--row 1-->
-        <!--col 1-->
-        <!--
-        <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_columnWeight="1"
-            android:layout_margin="2dp"
-            android:layout_rowWeight="1"
-            app:cardBackgroundColor="#4c97e7"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp"
-            android:id="@+id/scorecardCard"
-            android:clickable="true"
-            android:padding="5dp"
-            >
-
-
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_row="0"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Scorecard"
-                    android:textAlignment="center"
-                    android:textSize="18dp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-        -->
-
-
-
-        <!--col 2-->
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -134,75 +88,16 @@
 
         </android.support.v7.widget.CardView>
 
-        <!--row 2-->
-        <!--col 1-->
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="2dp"
-            app:cardBackgroundColor="#4c97e7"
-            app:cardElevation="8dp"
-            app:cardCornerRadius="8dp"
-            android:id="@+id/studyCard"
-            android:clickable="true"
-            >
-
-            <LinearLayout
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_column="0"
-                android:layout_row="0">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:text="Study"
-                    android:textSize="18dp"
-                    android:textAlignment="center" />
-
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <!--col 2-->
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_margin="2dp"
-            app:cardBackgroundColor="#4c97e7"
-            app:cardElevation="8dp"
-            app:cardCornerRadius="8dp"
-            android:id="@+id/questionBankCard"
-            android:clickable="true"
-            >
-
-            <LinearLayout
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_column="0"
-                android:layout_row="0">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:text="Question Bank"
-                    android:textSize="18dp"
-                    android:textAlignment="center" />
-
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
 
     </GridLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/gdView"
+        android:orientation="horizontal"
+        android:id="@+id/recyclerViewMedicalRelatedPictures">
+
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
