--- a/app/src/main/res/layout/activity_admin_medical_related_pics.xml
+++ b/app/src/main/res/layout/activity_admin_medical_related_pics.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".AdminMedicalRelatedPicsActivity">
 
-    
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recyclerViewAdminMedicalRelatedPics">
+
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
