--- a/app/src/main/res/layout/activity_admin_medical_related_pics.xml
+++ b/app/src/main/res/layout/activity_admin_medical_related_pics.xml
@@ -14,4 +14,16 @@
 
     </android.support.v7.widget.RecyclerView>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addMedicalRelatedPic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="22dp"
+        android:layout_marginRight="22dp"
+        app:srcCompat="@drawable/ic_note_add_black"
+        tools:ignore="VectorDrawableCompat" />
+
 </RelativeLayout>
