--- a/app/src/main/res/layout/list_of_medical_related_pics_admin.xml
+++ b/app/src/main/res/layout/list_of_medical_related_pics_admin.xml
@@ -19,12 +19,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/imageViewAdminMedicalRelatedPics"
-                android:layout_toLeftOf="@+id/deleteAdminMedicalRelatedPic"/>
+                android:layout_toLeftOf="@+id/deleteAdminMedicalRelatedPic"
+                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_delete_black"
+               android:layout_centerVertical="true"
                android:id="@+id/deleteAdminMedicalRelatedPic"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
