--- a/app/src/main/res/layout/activity_admin_medical_related_pics.xml
+++ b/app/src/main/res/layout/activity_admin_medical_related_pics.xml
@@ -8,8 +8,9 @@
 
 
     <android.support.v7.widget.RecyclerView
+        android:layout_margin="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/recyclerViewAdminMedicalRelatedPics">
 
     </android.support.v7.widget.RecyclerView>
