--- a/app/src/main/res/layout/list_of_medical_related_pictures.xml
+++ b/app/src/main/res/layout/list_of_medical_related_pictures.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:padding="2dp">
+        android:padding="2dp"
+        android:layout_margin="5dp"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
