--- a/app/src/main/res/layout/activity_new_question.xml
+++ b/app/src/main/res/layout/activity_new_question.xml
@@ -7,70 +7,101 @@
     tools:context=".NewQuestionActivity"
     android:padding="10dp">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true">
-
-        <android.support.design.widget.TextInputEditText
+        android:layout_centerHorizontal="true"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="8dp">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/addQuestionEditText"
-            android:hint="Question"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="#bf6969"
+            android:padding="10dp">
 
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:id="@+id/addOptionAEditText"
-            android:hint="Option A"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Fill the required fields to add a question"
+                android:textColor="#ffffff"
+                android:textSize="15dp"/>
 
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:id="@+id/addOptionBEditText"
-            android:hint="Option B"/>
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:id="@+id/addQuestionEditText"
+                android:hint="Question"
+                android:textColorHint="#000000"/>
 
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:id="@+id/addOptionCEditText"
-            android:hint="Option C"/>
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:id="@+id/addOptionAEditText"
+                android:hint="Option A"
+                android:textColorHint="#000000"/>
 
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:id="@+id/addOptionDEditText"
-            android:hint="Option D"/>
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:id="@+id/addOptionBEditText"
+                android:hint="Option B"
+                android:textColorHint="#000000"/>
 
-        <Spinner
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:id="@+id/correctOptionSpinner"
-            android:entries="@array/correctOption"
-            android:spinnerMode="dropdown">
-        </Spinner>
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:id="@+id/addOptionCEditText"
+                android:hint="Option C"
+                android:textColorHint="#000000"/>
 
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:id="@+id/addExplanationEditText"
-            android:hint="Explanation"/>
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:id="@+id/addOptionDEditText"
+                android:hint="Option D"
+                android:textColorHint="#000000"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:id="@+id/submitQuestionButton"
-            android:text="button"/>
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:id="@+id/correctOptionSpinner"
+                android:entries="@array/correctOption"
+                android:spinnerMode="dropdown"
+                >
+            </Spinner>
 
-    </LinearLayout>
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:id="@+id/addExplanationEditText"
+                android:hint="Explanation"
+                android:textColorHint="#000000"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="28dp"
+                android:id="@+id/submitQuestionButton"
+                android:text="Submit"
+                android:textColor="#ffffff"
+                android:background="#4e0000"
+                android:textSize="20dp"
+                android:layout_weight="1"
+                />
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+
 
 </RelativeLayout>
