--- a/app/src/main/res/layout/activity_new_ppts_and_pdfs_types.xml
+++ b/app/src/main/res/layout/activity_new_ppts_and_pdfs_types.xml
@@ -46,6 +46,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Journal"
+                    android:layout_margin="10dp"
                     android:textStyle="bold"
                     android:textColor="#ffffff"
                     android:textSize="20dp"/>
@@ -65,6 +66,7 @@
                     android:layout_height="wrap_content"
                     android:text="Paper Presentation"
                     android:textStyle="bold"
+                    android:layout_margin="10dp"
                     android:textColor="#ffffff"
                     android:textSize="20dp"/>
             </android.support.v7.widget.CardView>
@@ -82,6 +84,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Quiz"
+                    android:layout_margin="10dp"
                     android:textStyle="bold"
                     android:textColor="#ffffff"
                     android:textSize="20dp"/>
@@ -101,6 +104,7 @@
                     android:layout_height="wrap_content"
                     android:text="Mnemonics"
                     android:textStyle="bold"
+                    android:layout_margin="10dp"
                     android:textColor="#ffffff"
                     android:textSize="20dp"/>
             </android.support.v7.widget.CardView>
