--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -18,24 +18,55 @@
         android:id="@+id/headingAdmin"
         />
 
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonLogout"
+        android:orientation="horizontal"
         android:layout_below="@+id/headingAdmin"
-        android:text="logout"
-        android:layout_margin="10dp"
-        android:onClick="logout"/>
+        android:id="@+id/linearLayoutAlteringLogout"
+        android:background="@color/lightColor">
+
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/switchOnOff"
+            android:text="Altering     "
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:layout_weight="0"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonLogout"
+            android:layout_below="@+id/headingAdmin"
+            android:text="LOGOUT"
+            android:textSize="20dp"
+            android:textColor="#ffffff"
+            android:background="@color/normalColor"
+            android:layout_margin="10dp"
+            android:onClick="logout"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/buttonLogout">
+        android:layout_below="@id/linearLayoutAlteringLogout"
+        android:layout_marginTop="20dp">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:cardBackgroundColor="@color/lightColor">
+            app:cardBackgroundColor="@color/lightColor"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp">
 
 
             <GridLayout
