--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -53,13 +53,20 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="*Please turn off altering before exiting the app. "
+        android:layout_below="@+id/linearLayoutAlteringLogout"
+        android:textColor="#000000"/>
+
 
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/linearLayoutAlteringLogout"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="30dp">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
