--- a/app/src/main/res/layout/activity_new_mock_test.xml
+++ b/app/src/main/res/layout/activity_new_mock_test.xml
@@ -67,31 +67,25 @@
 
                             <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="horizontal">
-                            </LinearLayout>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="start"
-                                android:layout_marginLeft="10dp"
-                                android:gravity="center"
-                                android:textColor="#ffffff"
-                                android:text="A : "
-                                android:textSize="25sp" />
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:gravity="center"
-                                android:orientation="vertical">
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="start"
+                                    android:layout_marginLeft="10dp"
+                                    android:gravity="center"
+                                    android:textColor="#ffffff"
+                                    android:text="A : "
+                                    android:textSize="25sp" />
 
                                 <TextView
                                     android:id="@+id/textViewUserOptionA"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_marginLeft="10dp"
                                     android:text="About above image"
                                     android:textColor="#ffffff"/>
 
@@ -113,30 +107,25 @@
 
                             <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="horizontal">
-                            </LinearLayout>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:text="B : "
-                                android:textSize="25sp"
-                                android:textColor="#ffffff"
-                                android:layout_gravity="start"
-                                android:layout_marginLeft="10dp"
-                                android:gravity="center"/>
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:layout_gravity="center"
-                                android:gravity="center">
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="B : "
+                                    android:textSize="25sp"
+                                    android:textColor="#ffffff"
+                                    android:layout_gravity="start"
+                                    android:layout_marginLeft="10dp"
+                                    android:gravity="center"/>
 
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:id="@+id/textViewUserOptionB"
+                                    android:layout_gravity="center"
+                                    android:layout_marginLeft="10dp"
                                     android:text="About above image"
                                     android:textColor="#ffffff"/>
 
@@ -158,30 +147,25 @@
 
                             <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="horizontal">
-                            </LinearLayout>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:text="C : "
-                                android:textSize="25sp"
-                                android:textColor="#ffffff"
-                                android:layout_gravity="start"
-                                android:layout_marginLeft="10dp"
-                                android:gravity="center"/>
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:layout_gravity="center"
-                                android:gravity="center">
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="C : "
+                                    android:textSize="25sp"
+                                    android:textColor="#ffffff"
+                                    android:layout_gravity="start"
+                                    android:layout_marginLeft="10dp"
+                                    android:gravity="center"/>
 
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:id="@+id/textViewUserOptionC"
+                                    android:layout_gravity="center"
+                                    android:layout_marginLeft="10dp"
                                     android:text="About above image"
                                     android:textColor="#ffffff"/>
 
@@ -203,30 +187,25 @@
 
                             <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="horizontal">
-                            </LinearLayout>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:text="D : "
-                                android:textSize="25sp"
-                                android:textColor="#ffffff"
-                                android:layout_gravity="start"
-                                android:layout_marginLeft="10dp"
-                                android:gravity="center"/>
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:layout_gravity="center"
-                                android:gravity="center">
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="D : "
+                                    android:textSize="25sp"
+                                    android:textColor="#ffffff"
+                                    android:layout_gravity="start"
+                                    android:layout_marginLeft="10dp"
+                                    android:gravity="center"/>
 
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:id="@+id/textViewUserOptionD"
+                                    android:layout_gravity="center"
+                                    android:layout_marginLeft="10dp"
                                     android:text="About above image"
                                     android:textColor="#ffffff"/>
 
