--- a/app/src/main/res/layout/activity_new_mock_test.xml
+++ b/app/src/main/res/layout/activity_new_mock_test.xml
@@ -35,14 +35,36 @@
                     android:orientation="vertical"
                     android:layout_marginTop="10dp">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/textViewUserQuestion"
-                        android:text="Question Text View"
-                        android:textSize="20sp"
-                        android:layout_margin="16dp"
-                        android:textColor="#000000"/>
+                        android:orientation="horizontal"
+                        android:layout_margin="16dp">
+
+                        <TextView
+                            android:id="@+id/questionCount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center|top"
+                            android:layout_margin="12dp"
+                            android:text="1. "
+                            android:textColor="#000000"
+                            android:textSize="20dp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/textViewUserQuestion"
+                            android:layout_marginRight="12dp"
+                            android:layout_marginVertical="12dp"
+                            android:layout_marginLeft="5dp"
+                            android:text="Question Text View"
+                            android:textSize="20sp"
+                            android:textColor="#000000"/>
+
+                    </LinearLayout>
+
+
 
                     <GridLayout
                         android:layout_width="match_parent"
