--- a/app/src/main/res/layout/activity_user_question.xml
+++ b/app/src/main/res/layout/activity_user_question.xml
@@ -16,9 +16,9 @@
             android:layout_height="match_parent">
 
             <android.support.v7.widget.CardView
+                android:id="@+id/cardPath"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/cardPath"
                 app:cardBackgroundColor="@color/lightColor"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp">
@@ -32,8 +32,7 @@
                         android:id="@+id/path"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        >
+                        android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/pathChap"
@@ -59,13 +58,12 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:background="@color/normalColor"
-                        android:textColor="#ffffff"
-                        android:text="EXIT" />
+                        android:text="EXIT"
+                        android:textColor="#ffffff" />
 
                 </RelativeLayout>
 
             </android.support.v7.widget.CardView>
-
 
 
             <android.support.v7.widget.CardView
@@ -84,14 +82,34 @@
                     android:layout_marginTop="10dp"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/textViewUserQuestion"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="16dp"
-                        android:text="Question Text View"
-                        android:textColor="#000000"
-                        android:textSize="20sp" />
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/questionCount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center|top"
+                            android:layout_margin="12dp"
+                            android:text="1. "
+                            android:textColor="#000000"
+                            android:textSize="20dp" />
+
+                        <TextView
+                            android:id="@+id/textViewUserQuestion"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="12dp"
+                            android:layout_marginVertical="12dp"
+                            android:layout_marginLeft="5dp"
+                            android:text="Question Text View"
+                            android:textColor="#000000"
+                            android:textSize="20sp" />
+
+                    </LinearLayout>
 
                     <GridLayout
                         android:layout_width="match_parent"
