--- a/app/src/main/res/layout/activity_new_mock_test.xml
+++ b/app/src/main/res/layout/activity_new_mock_test.xml
@@ -14,10 +14,41 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/timerLinearLayout"
+                android:layout_above="@+id/cardViewQuestion"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Time Left:"
+                    android:textColor="#000000"
+                    android:textSize="34sp" />
+
+                <TextView
+                    android:id="@+id/countDownText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:text="45"
+                    android:textColor="#000000"
+                    android:textSize="34sp" />
+            </LinearLayout>
+
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:text="EXIT"
                 android:id="@+id/exitQuestions" />
 
@@ -328,6 +359,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="22dp"
         android:layout_marginRight="10dp"
+        android:onClick="nextClicked"
         app:srcCompat="@drawable/ic_navigate_next_black"
         tools:ignore="VectorDrawableCompat" />
 
